--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Images/favicon-32x32.png">
 
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kumbh+Sans"> -->
@@ -24,12 +24,12 @@
                 fill="#69707D" fill-rule="evenodd"/>
             </svg>
         </div>
-        <img src="./images/image-product-1.jpg" alt="" class="image-preveiw" id="image-preveiw">
+        <img src="./Images/image-product-1.jpg" alt="" class="image-preveiw" id="image-preveiw">
         <div class="lightbox-thumbnails">
-            <img src="./images/image-product-1-thumbnail.jpg" alt="" id="pro1" onclick="display(pro1)">
-            <img src="./images/image-product-2-thumbnail.jpg" alt="" id="pro2" onclick="display(pro2)">
-            <img src="./images/image-product-3-thumbnail.jpg" alt="" id="pro3" onclick="display(pro3)">
-            <img src="./images/image-product-4-thumbnail.jpg" alt="" id="pro4" onclick="display(pro4)">
+            <img src="./Images/image-product-1-thumbnail.jpg" alt="" id="pro1" onclick="display(pro1)">
+            <img src="./Images/image-product-2-thumbnail.jpg" alt="" id="pro2" onclick="display(pro2)">
+            <img src="./Images/image-product-3-thumbnail.jpg" alt="" id="pro3" onclick="display(pro3)">
+            <img src="./Images/image-product-4-thumbnail.jpg" alt="" id="pro4" onclick="display(pro4)">
         </div>
     </div>
     <div id="baskit" class="hide">
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div onclick="Delete()">
-                <img src="./images/icon-delete.svg" alt="">
+                <img src="./Images/icon-delete.svg" alt="">
             </div>
         </div>
         <div class="Checkout" id="check-btn">Checkout</div>
@@ -60,11 +60,11 @@
     <div class="flex1">
         <div class="menu">
             <div class="menu-icon" id="menu-btn" >
-                <img src="./images/icon-menu.svg" alt="">
+                <img src="./Images/icon-menu.svg" alt="">
             </div>
             <nav id="menu">
                 <div class="close" id="close" >
-                    <img src="./images/icon-close.svg" alt="">
+                    <img src="./Images/icon-close.svg" alt="">
                 </div>
                 <a href="#">Collections</a>
                 <a href="#">Men</a>
@@ -74,7 +74,7 @@
             </nav>
         </div>
         <div class="logo">
-            <img src="./images/logo.svg" alt="">
+            <img src="./Images/logo.svg" alt="">
         </div>
     </div>
         <div class="flex2">
@@ -87,24 +87,24 @@
                 <div class="amount-not" id="notification"></div>
             </div>
             <div class="pro">
-                <img src="./images/image-avatar.png" alt="">
+                <img src="./Images/image-avatar.png" alt="">
             </div>
         </div>
     </div>
     <div class="grid-container">
         <div class="hero-img-container">
             <div class="hero-img">
-                <img src="./images/image-product-1.jpg" alt="" class="mySlides" id="slide">
-                <img src="./images/image-product-2.jpg" alt="" class="mySlides mySlides1">
-                <img src="./images/image-product-3.jpg" alt="" class="mySlides mySlides1">
-                <img src="./images/image-product-4.jpg" alt="" class="mySlides mySlides1">
+                <img src="./Images/image-product-1.jpg" alt="" class="mySlides" id="slide">
+                <img src="./Images/image-product-2.jpg" alt="" class="mySlides mySlides1">
+                <img src="./Images/image-product-3.jpg" alt="" class="mySlides mySlides1">
+                <img src="./Images/image-product-4.jpg" alt="" class="mySlides mySlides1">
             </div>
             <div class="arrows-container">
                 <div class="arr" onclick="plusSlides(-1)">
-                    <img src="./images/icon-previous.svg" alt="" >
+                    <img src="./Images/icon-previous.svg" alt="" >
                 </div>
                 <div class="arr" onclick="plusSlides(1)">
-                    <img src="./images/icon-next.svg" alt="" >
+                    <img src="./Images/icon-next.svg" alt="" >
                 </div>    
             </div>
         </div>
@@ -123,22 +123,22 @@
         <div class="amount-container">
             <div class="controls">
                 <div id="minus">
-                    <img src="./images/icon-minus.svg" alt="">
+                    <img src="./Images/icon-minus.svg" alt="">
                 </div>
                 <div class="amount" id="count">0</div>
                 <div id="plus">
-                    <img src="./images/icon-plus.svg" alt="">
+                    <img src="./Images/icon-plus.svg" alt="">
                 </div>
             </div>
             <button class="add-to-cart" onclick="add()">
-                <img src="./images/icon-white-cart.svg" alt="">
+                <img src="./Images/icon-white-cart.svg" alt="">
                 Add to cart</button>    
         </div>
         <div class="thumbnails-container">
-            <img src="./images/image-product-1-thumbnail.jpg" alt="" id="pro1" onclick="display(pro1)">
-            <img src="./images/image-product-2-thumbnail.jpg" alt="" id="pro2" onclick="display(pro2)">
-            <img src="./images/image-product-3-thumbnail.jpg" alt="" id="pro3" onclick="display(pro3)">
-            <img src="./images/image-product-4-thumbnail.jpg" alt="" id="pro4" onclick="display(pro4)">
+            <img src="./Images/image-product-1-thumbnail.jpg" alt="" id="pro1" onclick="display(pro1)">
+            <img src="./Images/image-product-2-thumbnail.jpg" alt="" id="pro2" onclick="display(pro2)">
+            <img src="./Images/image-product-3-thumbnail.jpg" alt="" id="pro3" onclick="display(pro3)">
+            <img src="./Images/image-product-4-thumbnail.jpg" alt="" id="pro4" onclick="display(pro4)">
         </div>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
