--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./Images/favicon-32x32.png">
 
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kumbh+Sans"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kumbh+Sans">
   
     <title>Frontend Mentor | E-commerce product page</title>
 
